Fix spacing issue in larger screens

--- a/css/main.css
+++ b/css/main.css
@@ -58,4 +58,7 @@ hr {
     padding: 0;
   }
 
+  .eng {
+    margin-bottom: 16px;
+  }
 }
